# COS110-Assignment-2

./: .gitignore  CMakeLists.txt  bivariate.cpp  circle.cpp  ellipse.cpp  linear.cpp  main.cpp  polynomial.cpp  quadratic.cpp  term.cpp  univariate.cpp
